--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ dependencies:
   cloud_firestore: ^0.13.5
   flutter_local_notifications: ^1.4.3
   shared_preferences: ^0.5.4
-  android_alarm_manager: ^0.4.5+11
   equatable: ^0.6.0
+  firebase_storage: ^3.1.6
+  image_picker: ^0.6.6+5
+  fluttertoast: ^4.0.0
 
 
 dev_dependencies:
