--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -12,6 +12,7 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<key>NSPhotoLibraryUsageDescription</key>
+	<string>laundryqueue</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
